iwhd NEWS                                                   -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  On Fedora systems, /etc/iwhd/conf.js is not overwritten anymore when
  upgrading the package (added %config(noreplace)).


* Noteworthy changes in release 0.96 (2011-06-15) [stable]

** New features

  Added VMware vSphere registration back-end. Type is "fs-vmw".

  The RHEV-M registration back-end can now import a just-uploaded template
  into a master storage domain. See new POST parameter "cluster".

** Bug fixes

  iwhd will segfault or hang less often during garbage-collection.
  [bug introduced in 0.91, partially fixed in 0.94]

  the iwhd init script start function would mistakenly succeed even when
  mongod failed to start in time.  Now, when mongod fails to start, that
  "start" function also fails.

  It is now possible to use Windows.Domain\Administrator as a user name
  in a cloud with Windows credentials. The backslash was causing an
  internal error due to improper JSON escaping.


* Noteworthy changes in release 0.95 (2011-05-17) [stable]

  Tested and ensured a support of registration in RHEV-M 2.2.


* Noteworthy changes in release 0.94 (2011-05-06) [stable]

** Bug fixes

  iwhd no longer segfaults during garbage-collection
  [bug introduced in 0.91]

  iwhd now emits syntactically valid JSON output for the root query.
  Before, it omitted the "providers": tag before the list of
  provider descriptions. [bug introduced in the beginning]


* Noteworthy changes in release 0.93 (2011-04-08) [stable]

** New features

  Condor back-end

** Bug fixes

  RHEV-M registration did all the right things, but returned code 400.


* Noteworthy changes in release 0.92 (2011-03-15) [stable]

** New features

  RHEV-M back-end

** Bug fixes

  attempting to delete a nonexistent bucket now elicits a 404 response
  Before, it was not possible to distinguish empty and nonexistent buckets.
